# pg_vector_test

./: alembic.ini  main.py  pyproject.toml  setup.sql
config/: settings.py
core/: __init__.py  data_processor.py  embedding.py  logger.py  text_processing.py
db/: __init__.py
db/migrations/: env.py
db/migrations/versions/: 828573f63fb4_create_init_table.py
db/models/: schema.py
